@@ -45,7 +45,7 @@ function module_main()
         header('Location: ?m=notices');
     } else {
         $notice = $DB->GetAll(
-            'SELECT m.subject, m.cdate, m.body, m.type, mi.id, mi.messageid, mi.destination, mi.status,
+            'SELECT m.subject, m.cdate, m.body, m.type, m.contenttype, mi.id, mi.messageid, mi.destination, mi.status,
                 mi.lastdate, mi.lastreaddate, mi.body as mibody
 			FROM customers c
 			JOIN messageitems mi ON mi.customerid = c.id
