@@ -89,6 +89,7 @@ version 25-git (????-??-??):
     from list [chilan]
   - improvement: added support for %services replace symbol in messages [ravvar]
   - improvement: allow display message body with wildcards for particular message [ravvar]
+  - improvement: added different content type of messages based on mime types [chilan/ravvar]
 
 version 24.0 (2019-05-16):
 
